# cc-flow

./: README.md  pyproject.toml
docs/: transcript-format.md
src/cc_flow/: __init__.py  cli.py  models.py  parser.py  renderer.py
src/cc_flow/assets/: app.js  styles.css
src/cc_flow/templates/: base.html.j2
tests/: __init__.py  conftest.py  test_parser.py  test_properties.py  test_renderer.py
tests/fixtures/: simple.jsonl  with_branches.jsonl  with_compaction.jsonl  with_images.jsonl  with_inline_subagent.jsonl  with_subagent.jsonl
