[project]
name = "cc-flow"
version = "0.1.0"
description = "Visualize Claude Code transcripts as interactive HTML"
readme = "README.md"
authors = [
    { name = "Patrik Persson", email = "patrikcpersson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
cc-flow = "cc_flow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_flow"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "hypothesis>=6.0",
    "ruff>=0.9",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard for Typer)
]

[tool.ruff.format]
quote-style = "double"

# ty configuration
[tool.ty]
python-version = "3.12"

[tool.ty.rules]
# Keep defaults, they're sensible
